@@ -1,3 +1,8 @@
+2005-04-04  Miguel Sofer <msofer@users.sf.net>
+
+	*** FROM HEAD ***
+	* generic/tclExecute.c: small opts in obj handling
+
 2005-04-02  Miguel Sofer <msofer@users.sf.net>
 
 	*** FROM HEAD ***
